12-Sep-2011 - Process details now display every column in the V$SESSION               column, including new fields added in 9i, 10g and 11g.
git-svn-id: svn://localhost/OIS2@5 7a03d42c-cd42-4f2b-90a3-7b965337538a

--- a/ext/showprocesses/CHANGELOG
+++ b/ext/showprocesses/CHANGELOG
@@ -2,6 +2,9 @@ APPLICATION=Processes Extension
 
 V2.01:
 
+12-Sep-2011 - Process details now display every column in the V$SESSION
+              column, including new fields added in 9i, 10g and 11g.
+
 31-Aug-2011 - Added sorting to process overview table
 
             - Fixed (again) the popup window selector, now SID/SERIAL# combo is
