02-Oct-2011 - Added additional views for DBMS_SCHEDULER_PROGRAMS and               DBMS_SCHEDULER_JOB_RUN_DETAILS.
            - Fixed a typo.
 


git-svn-id: svn://localhost/OIS2@6 7a03d42c-cd42-4f2b-90a3-7b965337538a

--- a/ext/dbjobs/CHANGELOG
+++ b/ext/dbjobs/CHANGELOG
@@ -1,5 +1,12 @@
 APPLICATION=DB Jobs Extension
 
+V2.01:
+
+02-Oct-2011 - Added additional views for DBMS_SCHEDULER_PROGRAMS and
+              DBMS_SCHEDULER_JOB_RUN_DETAILS.
+
+            - Fixed a typo.
+
 V2.00:
 
 30-May-2009 - Initial version of plugin completed.
