--- a/ext/schemaviewer/CHANGELOG
+++ b/ext/schemaviewer/CHANGELOG
@@ -1,11 +1,9 @@
-APPLICATION=Schema Viewer
+APPLICATION=Schema Viewer Extension
 
 V2.01:
 
-21-Oct-2011 - Added overview of the total size of a selected schema. This is
-              achived by counting both DBA_SEGMENTS and DBA_OBJECT_SIZE views.
-              Note that this shows the allocated space, not the real usage,
-              which is normally less the allocated space.
+15-Feb-2013 - Schema Overview button is now functional and displays the total
+              size of the selected schema.
 
 V2.00:
 
