--- a/ext/showprocesses/CHANGELOG
+++ b/ext/showprocesses/CHANGELOG
@@ -1,5 +1,9 @@
 APPLICATION=Processes Extension
 
+V2.02:
+
+22-May-2013 - Added possibility to kill a specific session
+
 V2.01:
 
 12-Sep-2011 - Process details now display every column in the V$SESSION
