31-Jan-2015 - Added automatic detection for OIS_INSTALL_PATH define.
V2.02:

21-Jul-2014 - Added new plugin "SQLMonitor"

            - Added global logging function WriteLog() which is configured
              via config.inc.php by specifing a filename for the logfile under
              the define "OIS_LOGFILE".

--- a/ext/dbjobs/CHANGELOG
+++ b/ext/dbjobs/CHANGELOG
@@ -2,6 +2,11 @@ APPLICATION=DB Jobs Extension
 
 V2.02:
 
+21-Jul-2014 - Fixed error handling, now every Oracle error will be displayed
+              to the caller instead of silently ignoring it.
+
+            - Added logging whenever one either enable or disable jobs.
+
 18-Jul-2014 - Added Loading indicator for tab switching
 
 V2.01:
